test/errors/list/remove_bad_type.np
l = [1]
l.remove("one")
